--- a/CozyComfortWindowsApp/CozyComfortWindowsApp.csproj
+++ b/CozyComfortWindowsApp/CozyComfortWindowsApp.csproj
@@ -81,6 +81,7 @@
     <Compile Include="ManufacturerDashboard.Designer.cs">
       <DependentUpon>ManufacturerDashboard.cs</DependentUpon>
     </Compile>
+    <Compile Include="Models\UserContext.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SellerDashboard.cs">
