--- a/CozyComfortWindowsApp/CozyComfortWindowsApp.csproj
+++ b/CozyComfortWindowsApp/CozyComfortWindowsApp.csproj
@@ -62,6 +62,12 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdminDashboard.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AdminDashboard.Designer.cs">
+      <DependentUpon>AdminDashboard.cs</DependentUpon>
+    </Compile>
     <Compile Include="CozyComfortServiceRef.cs" />
     <Compile Include="DistributorDashboard.cs">
       <SubType>Form</SubType>
