Admin + Service reference update

--- a/CozyComfortWindowsApp/App.config
+++ b/CozyComfortWindowsApp/App.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="CozyComfortWindowsApp.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
@@ -12,10 +17,18 @@
 		</bindings>
 		<client>
 			<endpoint address="http://localhost:44365/CozyComfortService.asmx"
-					  binding="basicHttpBinding"
-					  bindingConfiguration="CozyComfortServiceSoap"
-					  contract="CozyComfortServiceRef.CozyComfortServiceSoap"
-					  name="CozyComfortServiceSoap" />
+       binding="basicHttpBinding"
+       bindingConfiguration="CozyComfortServiceSoap"
+       contract="CozyComfortServiceRef.CozyComfortServiceSoap"
+       name="CozyComfortServiceSoap" />
 		</client>
 	</system.serviceModel>
+ <applicationSettings>
+  <CozyComfortWindowsApp.Properties.Settings>
+   <setting name="CozyComfortWindowsApp_CozyComfortServiceRef_CozyComfortService"
+    serializeAs="String">
+    <value>http://localhost:44365/CozyComfortService.asmx</value>
+   </setting>
+  </CozyComfortWindowsApp.Properties.Settings>
+ </applicationSettings>
 </configuration>
