--- a/CozyComfortWindowsApp/Properties/Settings.settings
+++ b/CozyComfortWindowsApp/Properties/Settings.settings
@@ -1,5 +1,9 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="CozyComfortWindowsApp.Properties" GeneratedClassName="Settings">
   <Profiles />
-  <Settings />
+  <Settings>
+    <Setting Name="CozyComfortWindowsApp_CozyComfortServiceRef_CozyComfortService" Type="(Web Service URL)" Scope="Application">
+      <Value Profile="(Default)">http://localhost:44365/CozyComfortService.asmx</Value>
+    </Setting>
+  </Settings>
 </SettingsFile>
